--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="button left">Click Me!</button>
-    <button class="button right">No, Click Me!</button>
+    <button class="btn left">Click Me!</button>
+    <button class="btn right">No, Click Me!</button>
   </body>
 </html>
