--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo-links">
+      <div class="left-items">
         <div class="logo">
           LOGO
         </div>
